ttools: avoid a URL constructor
Deprecated in Java 20.